[project]
name = "ohmeow-website"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ohmeow", email = "wgilliam@ohmeow.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
